# querymaster

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
config/: connection.ini  query_configs.csv
examples/: example_queries.py
querymaster/: __init__.py  config_manager.py  core.py  database_errors.py  db_connectors.py  logger.py  query_executor.py
