[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querymaster"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "An asynchronous SQL query execution tool supporting Oracle and Postgres databases"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "asyncpg",
    "oracledb",
    "pyarrow",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/querymaster"
"Bug Tracker" = "https://github.com/yourusername/querymaster/issues"